<resources>
    <string name="app_name">LayoutPriject</string>
    <string name="layout_project">This is my layout project</string>

    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>

    <string name="check_box_1">CheckBox 1</string>
    <string name="check_box_2">CheckBox 2</string>
    <string name="check_box_3">CheckBox 3</string>
    <string name="check_box_4">CheckBox 4</string>
    <string name="check_box_5">CheckBox 5</string>
    <string name="check_box_6">CheckBox 6</string>

    <string name="img_view">Smiley Face</string>
</resources>